try to fix horizontal scroll. try again

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,9 +3,10 @@
 footer {
     border-top: solid 2px $secondary-color;
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     display: flex;
     justify-content: flex-end;
+    flex-shrink: 0;
 }
 
 .iconsFooter {
