--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -2,12 +2,12 @@
 
 .linkHome {
     display: flex;
-    margin-bottom: 3rem;
+    margin-bottom: 3vw;
 }
 
 .linkBg {
-    margin: 0 4rem 0 0;
-    padding: 2rem 2rem;
+    margin: 0 4vw 0 0;
+    padding: 2vw 2vw;
     text-align: center;
     background-color: $secondary-color;
     position: relative;
